Fix flickity aspect ratio on mobile.

--- a/assets/scss/_components/flickity.scss
+++ b/assets/scss/_components/flickity.scss
@@ -36,7 +36,11 @@
   cursor: zoom-in;
   img {
     max-width: 100%;
-    height: 300px;
+    min-height: 100px;
+    @include media-breakpoint-up(sm) {
+      height: 300px;
+    }
+
     object-fit: cover;
     @include media-breakpoint-up(md) {
       height: 400px;
